--- a/country_language_url.services.yml
+++ b/country_language_url.services.yml
@@ -4,7 +4,11 @@ services:
   country_language_url.country:
     class: Drupal\country_language_url\Service\Country
     arguments: ['@config.factory', '@language_manager', '@request_stack','@country_language_url.country_detector']
-
   plugin.manager.country_language_manager:
     class: Drupal\country_language_url\CountryLanguageManagerPluginManager
     parent: default_plugin_manager
+  country_language_url.cache_context:
+    class: Drupal\country_language_url\Context\CountryLanguageCache
+    arguments: [ '@request_stack', '@country_language_url.country' ]
+    tags:
+      - { name: cache.context }
