--- a/country_language_url.services.yml
+++ b/country_language_url.services.yml
@@ -3,7 +3,7 @@ services:
     class: Drupal\country_language_url\Service\CountryDetector
   country_language_url.country:
     class: Drupal\country_language_url\Service\Country
-    arguments: ['@config.factory', '@language_manager', '@request_stack','@country_language_url.country_detector']
+    arguments: ['@config.factory', '@language_manager', '@request_stack','@country_language_url.country_detector', '@plugin.manager.country_language_manager']
   plugin.manager.country_language_manager:
     class: Drupal\country_language_url\CountryLanguageManagerPluginManager
     parent: default_plugin_manager
