--- a/country_language_url.services.yml
+++ b/country_language_url.services.yml
@@ -1,6 +1,9 @@
 services:
   country_language_url.country_detector:
     class: Drupal\country_language_url\Service\CountryDetector
+  country_language_url.country_redirect:
+    class: Drupal\country_language_url\Service\CountryRedirect
+    arguments: ['@path_processor_manager', '@country_language_url.country']
   country_language_url.country:
     class: Drupal\country_language_url\Service\Country
     arguments: ['@config.factory', '@language_manager', '@request_stack','@country_language_url.country_detector', '@plugin.manager.country_language_manager']
